Archive2/30/5ab79cf8b7a200/output
main.cpp:2:1: error: expected unqualified-id before numeric constant
 2 int main ()
 ^
