Archive2/30/5ab79cf8b7a200/main.cpp
# define O 1 // That ’s an oh , not a zero
2 int main ()
3 {
4 return O;
5 }